build: Abort build when NPM audit detects dependencies with high or critical vulnerabilities.

--- a/myreader-frontend/build.gradle
+++ b/myreader-frontend/build.gradle
@@ -23,7 +23,7 @@ project.afterEvaluate {
 }
 
 task dependencyCheckAnalyze(type: NpmTask, dependsOn: npm_install) {
-    args = ['audit']
+    args = ['run', 'audit:high']
 }
 
 task lint(type: NpmTask, dependsOn: npm_install) {
